--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1 class="title">Reliable, efficient delivery<p>Powered by Technology</p></h1>
+      <h1 class="title">Reliable, efficient delivery<span>Powered by Technology</span></h1>
       <p class="subtitle">Our Artificial Intelligence powered tools use millions of project data points 
         to ensure that your project is successful</p>
     </header>
